<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_listemp"
            android:title="@string/menu_employyelist" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_action_addemployee"
            android:title="@string/menu_addemployee" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_help"
            android:title="@string/menu_help"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
