<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.group6_f2019_mad3125_fp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.group6_f2019_mad3125_fp.ui.ListOfEmployee.ListOfEmployeeFragment"
        android:label="@string/menu_employyelist"
        tools:layout="@layout/fragment_employeelist" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.group6_f2019_mad3125_fp.ui.addemployee.AddEmployeeFragment"
        android:label="@string/menu_addemployee"
        tools:layout="@layout/fragment_addemployee" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.group6_f2019_mad3125_fp.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.group6_f2019_mad3125_fp.ui.logout.LogOutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_share" />

</navigation>